some changes in intro page sections

--- a/_includes/blog_latest_articles.html
+++ b/_includes/blog_latest_articles.html
@@ -21,7 +21,7 @@
             {% assign articles = site.articles | reverse %}
             {% for article in articles | limit:3 %}
                 <div class="col s12 m12 l4">
-                    <article id="{{ post.title }}" class="card">
+                    <article id="{{ post.title }}" class="card intro-article-card">
                         <span class="card-title"><a href="{{ article.url }}" class="grey-text text-darken-3"><i class="fa fa-angle-left"></i>&nbsp;   {{ article.title }}</a></span>
                         {% if article.thumbnail %}
                         <picture>
