--- a/_includes/intro-travels.html
+++ b/_includes/intro-travels.html
@@ -21,7 +21,7 @@
             {% assign travels = site.travels | reverse %}
             {% for travel in travels | limit:3 %}
                 <div class="col s12 m12 l4">
-                    <article id="{{ travel.title }}" class="card">
+                    <article id="{{ travel.title }}" class="card intro-article-card">
                         <span class="card-title"><a href="{{ travel.url }}" class="grey-text text-darken-3"><i class="fa fa-map-signs"></i>&nbsp;   {{ travel.title }}</a></span>
                         {% if travel.thumbnail %}
                         <picture>
