--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,7 @@
     <div class="clearfix"></div>
 
     <!--  Scripts-->
-    <script
-    src="https://code.jquery.com/jquery-2.2.4.min.js"
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
     crossorigin="anonymous"></script>
     <script src="{{ site.url }}/assets/js/materialize.js"></script>
