--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,13 @@ pre{
   display: table;
 }
 
+img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .img-fit {
   object-fit: cover;
   width: 100%;
