add ".post img" class in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,3 +228,10 @@ footer.page-footer {
 #breadcrumbs{
   direction: ltr !important;
 }
+
+.post img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
