jquery 2 and 3 added to assets/js, reading time added to post layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,8 @@
     <div class="clearfix"></div>
 
     <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
-    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-    crossorigin="anonymous"></script>
-    <script src="{{ site.url }}/assets/js/materialize.js"></script>
+    <script src="{{ site.url }}//assets/jquery-2.2.4.min.js"></script>
+    <script src="{{ site.url }}/assets/js/materialize.min.js"></script>
     <script src="{{ site.url }}/assets/js/init.js"></script>
 
   </body>
