--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,37 +1,49 @@
-<footer class="page-footer red darken-4">
+<footer class="page-footer white z-depth-1">
     <div class="container">
         <div class="row">
         <div class="col l6 s12">
-            <h5 class="white-text">Company Bio</h5>
-            <p class="grey-text text-lighten-4">
+            <h5 class="grey-text text-darken-3 center">پانویس</h5>
+            <p class="grey-text text-darken-3">
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
             </p>
 
 
         </div>
         <div class="col l3 s12">
-            <h5 class="white-text">Settings</h5>
+            <h5 class="grey-text text-darken-3 center">عنوان</h5>
             <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-darken-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-darken-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-darken-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-darken-3" href="#!">Link 4</a></li>
             </ul>
         </div>
         <div class="col l3 s12">
-            <h5 class="white-text">Connect</h5>
+            <h5 class="grey-text text-darken-3 center">عنوان</h5>
             <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-darken-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-darken-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-darken-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-darken-3" href="#!">Link 4</a></li>
             </ul>
         </div>
         </div>
     </div>
-    <div class="footer-copyright">
+    <div class="footer-copyright grey darken-3 z-depth-1">
         <div class="container">
-        مشارکت در این پروژه <a class="btn grey lighten-3 red-text text-darken-3" href="https://github.com/iamrf/iamrf.github.io"><i class="fa fa-github"></i>&nbsp;   گیت هاب</a>
+            <div class="row">
+                <div class="col m6">
+                    <span>
+                        مشارکت در این پروژه &nbsp; <a class="btn grey lighten-4 grey-text text-darken-3" href="https://github.com/iamrf/iamrf.github.io"><i class="fa fa-github"></i>&nbsp;   گیت هاب</a>
+                    </span>
+                </div>
+                <div class="col m6">
+                    <span class="left ltr">
+                        <i class="fa fa-balance-scale"></i> &nbsp; 
+                        GNU General Public License v3.0
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
