jquery address in default layout fixed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div class="clearfix"></div>
 
     <!--  Scripts-->
-    <script src="{{ site.url }}//assets/jquery-2.2.4.min.js"></script>
+    <script src="{{ site.url }}/assets/js/jquery-2.2.4.min.js"></script>
     <script src="{{ site.url }}/assets/js/materialize.min.js"></script>
     <script src="{{ site.url }}/assets/js/init.js"></script>
 
