navbar social links updated, mobile-menu navbar hover color defined red, and mobile-navbar display changed to block

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,17 +29,17 @@
     <hr>
     <li>
         <div class="row">
-            <div class="col s3">
+            <div class="col s3 center">
                 <a href="{{ site.url }}/feed.xml" class="grey-text text-darken-3"><i class="fa fa-rss fa-2x"></i></a>
             </div>
-            <div class="col s3">
+            <div class="col s3 center">
                 <a href="https://github.com/iamrf/iamrf.github.io" class="grey-text text-darken-3"><i class="fa fa-github fa-2x"></i></a>
             </div>
-            <div class="col s3">
-                <a href="{{ site.url }}/feed.xml" class="grey-text text-darken-3"><i class="fa fa-instagram fa-2x"></i></a>
+            <div class="col s3 center">
+                <a href="https://www.instagram.com/rf.fa/" class="grey-text text-darken-3"><i class="fa fa-instagram fa-2x"></i></a>
             </div>
-            <div class="col s3">
-                <a href="{{ site.url }}/feed.xml" class="grey-text text-darken-3"><i class="fa fa-linkedin fa-2x"></i></a>
+            <div class="col s3 center">
+                <a href="https://ir.linkedin.com/in/aref-fallah" class="grey-text text-darken-3"><i class="fa fa-linkedin fa-2x"></i></a>
             </div>
         </div>
     </li>
