--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,38 @@
 ---
 layout: default
 ---
-<article class="post">
+<section class="under-navbar">
+  <div class="container">
+    <div class="row">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
+      {% include breadcrumbs.html %}
 
-  <div class="post-content">
-    {{ content }}
+      <div class="s12">
+      <article id="{{ page.title | escape }}" class="card post" itemscope itemtype="http://schema.org/BlogPosting">
+
+        <header class="post-header">
+          <h1 class="post-title p-name center" itemprop="name headline">{{ page.title | escape }}</h1>
+        </header>
+
+        <div class="post-content e-content" itemprop="articleBody">
+          {% if page.thumbnail %}
+            <picture>
+                <img src="{{ site.url }}/{{ page.thumbnail }}" alt="{{ page.title }}" class="img-fit">
+            </picture>
+          {% else %}
+            <hr>
+          {% endif %}
+          {{ content }}
+        </div>
+
+        <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+
+      </article>
+      </div>
+    </div>
   </div>
+</section>
 
-</article>
+<div class="clearfix"></div>
+
+{% include footer.html %}
