align-justify class defined in css and applied to footer text section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,10 @@ img{
   direction: rtl !important;
 }
 
+.align-justify{
+  text-align: justify !important;
+}
+
 nav ul a,
 nav .brand-logo {
   color: #444;
