all icons migrated to fontawesome 4.7 and google materials fonts removed from head section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="col s12 m12 l8">
                     <h4 class="center">
-                        <i class="material-icons md-2">fingerprint</i>
+                        <i class="fa fa-address-card-o"></i> &nbsp;
                         چند خطی درباره من
                     </h4>
                     <p>
