--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,8 +13,9 @@
                 <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss fa-2x"></i></a></li>
             </ul>
 
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons grey-text text-darken-3">menu</i></a>
+            <a href="#" data-target="nav-mobile" class="btn-floating btn-large halfway-fab waves-effect waves-light white sidenav-trigger"><i class="fa fa-bars grey-text text-darken-3"></i></a>
         </div>
+
     </nav>
 </div>
 
