nav-mobile halfway-fab right align changed to 0

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,9 +272,5 @@ footer.page-footer {
 }
 
 .btn-floating.halfway-fab {
-  right: 24px !important;
-}
-
-.btn-floating.halfway-fab:hover{
-  right: 27px !important;
+  right: 0rem !important;
 }
