--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,3 +274,39 @@ footer.page-footer {
 .btn-floating.halfway-fab {
   right: 0rem !important;
 }
+
+#blog-index .card{
+  margin: .5rem 0 2rem;
+}
+
+#blog-index .card-title{
+  padding: 1rem 1rem 0;
+}
+
+#blog-index .card-content p{
+  text-align: justify
+}
+
+#blog-index img{
+  border-radius: .5rem;
+}
+
+#blog-index .post-more-btn{
+  position: absolute;
+  bottom: 1rem;
+  left: 0px;
+}
+
+#blog-index .btn{
+  border-top-left-radius: 0px !important;
+  border-bottom-left-radius: 0px !important;
+}
+
+#blog-index h1{
+  font-size: 2rem;
+}
+
+#blog-index header{
+  padding: 1rem 0;
+  margin: .5rem 0 1rem;
+}
