social links defined in config file, footer-social-icons section created in footer.html and styled, links in foter section also styled for hovered times

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,3 +310,25 @@ footer.page-footer {
   padding: 1rem 0;
   margin: .5rem 0 1rem;
 }
+
+#footer-social-icons{
+  display: block;
+  padding: 1rem 0;
+}
+#footer-social-icons a{
+  margin: 1rem !important;
+}
+
+.footer-links a{
+  padding: .3rem .5rem .3rem 0;
+  display: block;
+  width: 100%;
+  transition: .3s;
+}
+
+.footer-links a:hover{
+  transition: .3s;
+  border-radius: .1rem;
+  background: #eee;
+  color: #333 !important;
+}
