--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,40 +1,51 @@
-<footer class="page-footer white z-depth-1">
+<footer class="page-footer grey darken-3 grey-text text-lighten-4 z-depth-1">
     <div class="container">
         <div class="row">
-        <div class="col l6 s12">
-            <h5 class="grey-text text-darken-3 center">پانویس</h5>
-            <p class="grey-text text-darken-3 align-justify">
-                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
-            </p>
+            <div class="col l6 s12">
+                <h5 class="center">پانویس</h5>
+                <p class="align-justify">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                </p>
 
+            </div>
+            <div class="col l3 s12 footer-links">
+                <h5 class="center">صفحه های دیگر</h5>
+                <ul>
+                    {% for page in site.pages %}
+                        {% if page.title %}
+                            <li><a class="grey-text text-lighten-4" href="{{ page.url }}">{{ page.title}}</a></li>
+                        {% endif%}
+                    {% endfor %}
+            
+                </ul>
+            </div>
+            <div class="col l3 s12 footer-links">
+                <h5 class="center">عنوان</h5>
+                <ul>
+                <li><a class="grey-text text-lighten-4" href="#!">Link 1</a></li>
+                <li><a class="grey-text text-lighten-4" href="#!">Link 2</a></li>
+                <li><a class="grey-text text-lighten-4" href="#!">Link 3</a></li>
+                <li><a class="grey-text text-lighten-4" href="#!">Link 4</a></li>
+                </ul>
+            </div>
+        </div>
 
+        <div id="footer-social-icons" class="s12 center-align">
+            <a class="grey-text text-lighten-4" href="{{ site.url }}/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
+            <a class="grey-text text-lighten-4" href="{{ site.github_url }}"><i class="fa fa-github fa-2x"></i></a>
+            <a class="grey-text text-lighten-4" href="{{ site.stackoverflow_url }}"><i class="fa fa-stack-overflow fa-2x"></i></a>
+            <a class="grey-text text-lighten-4" href="{{ site.linkedin_url }}"><i class="fa fa-linkedin fa-2x"></i></a>
+            <a class="grey-text text-lighten-4" href="{{ site.instagram_url }}"><i class="fa fa-instagram fa-2x"></i></a>
+            <a class="grey-text text-lighten-4" href="{{ site.twitter_url }}"><i class="fa fa-twitter fa-2x"></i></a>
         </div>
-        <div class="col l3 s12">
-            <h5 class="grey-text text-darken-3 center">عنوان</h5>
-            <ul>
-            <li><a class="grey-text text-darken-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-darken-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-darken-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-darken-3" href="#!">Link 4</a></li>
-            </ul>
-        </div>
-        <div class="col l3 s12">
-            <h5 class="grey-text text-darken-3 center">عنوان</h5>
-            <ul>
-            <li><a class="grey-text text-darken-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-darken-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-darken-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-darken-3" href="#!">Link 4</a></li>
-            </ul>
-        </div>
-        </div>
+
     </div>
-    <div class="footer-copyright grey darken-3 z-depth-1">
+    <div class="footer-copyright grey darken-2 z-depth-1">
         <div class="container">
             <div class="row">
                 <div class="col m6">
                     <span>
-                        مشارکت در این پروژه &nbsp; <a class="btn grey lighten-4 grey-text text-darken-3" href="https://github.com/iamrf/iamrf.github.io"><i class="fa fa-github"></i>&nbsp;   گیت هاب</a>
+                        مشارکت در این پروژه &nbsp; <a class="btn grey lighten-4 grey-text text-darken-3 waves-effect waves-dark" href="{{ site.project_url }}"><i class="fa fa-github"></i>&nbsp;   گیت هاب</a>
                     </span>
                 </div>
                 <div class="col m6">
