navbar social icons links updated to social links in config.yml file

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
                     {% endif %}
                 {% endfor %}
 
-                <li><a href="https://github.com/iamrf/iamrf.github.io"><i class="fa fa-github fa-2x"></i></a></li>
+                <li><a href="{{ site.github_url }}"><i class="fa fa-github fa-2x"></i></a></li>
                 <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss fa-2x"></i></a></li>
             </ul>
 
@@ -34,13 +34,13 @@
                 <a href="{{ site.url }}/feed.xml" class="grey-text text-darken-3"><i class="fa fa-rss fa-2x"></i></a>
             </div>
             <div class="col s3 center">
-                <a href="https://github.com/iamrf/iamrf.github.io" class="grey-text text-darken-3"><i class="fa fa-github fa-2x"></i></a>
+                <a href="{{ site.github_url }}" class="grey-text text-darken-3"><i class="fa fa-github fa-2x"></i></a>
             </div>
             <div class="col s3 center">
-                <a href="https://www.instagram.com/rf.fa/" class="grey-text text-darken-3"><i class="fa fa-instagram fa-2x"></i></a>
+                <a href="{{ site.instagram_url }}" class="grey-text text-darken-3"><i class="fa fa-instagram fa-2x"></i></a>
             </div>
             <div class="col s3 center">
-                <a href="https://ir.linkedin.com/in/aref-fallah" class="grey-text text-darken-3"><i class="fa fa-linkedin fa-2x"></i></a>
+                <a href="{{ site.linkedin_url}}" class="grey-text text-darken-3"><i class="fa fa-linkedin fa-2x"></i></a>
             </div>
         </div>
     </li>
