article section parts deleted from project, more buttons in intro left-radius decreased to 0

--- a/_includes/blog_latest_posts.html
+++ b/_includes/blog_latest_posts.html
@@ -40,7 +40,7 @@
                 {% endfor %}
 
                 <div id="" class="col s12 center link-to-collections">
-                    <a href="{{ site.url }}/blog" class="btn btn-large red darken-4 red-text text-lighten-4 waves-effect"><i class="fa fa-file-text-o"></i>&nbsp;      مشاهده وبلاگ      </a>
+                    <a href="{{ site.url }}/blog" class="btn btn-large pulse red darken-4 red-text text-lighten-4 waves-effect"><i class="fa fa-file-text-o"></i>&nbsp;      مشاهده وبلاگ      </a>
                 </div>
 
             </div>
