--- a/_includes/intro-travels.html
+++ b/_includes/intro-travels.html
@@ -15,7 +15,7 @@
         <div class="parallax"><img src="{{ site.url }}/assets/img/background3.jpg" alt="سفرنامه"></div>
     </div>
 
-    <div class="container">
+    <div id="intro-travel-body" class="container">
         <div class="row">
             
             {% assign travels = site.travels | reverse %}
