--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,8 @@ layout: default
       <div class="s12">
       <article id="{{ page.title | escape }}" class="card post" itemscope itemtype="http://schema.org/BlogPosting">
 
-        <header class="post-header">
-          <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+        <header class="">
+          <h1 class="" itemprop="name headline">{{ page.title | escape }}</h1>
           <p class="post-meta">
             <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
               <i class="fa fa-calendar"></i> &nbsp;
@@ -35,7 +35,7 @@ layout: default
           </p>
         </header>
 
-        <div class="post-content e-content" itemprop="articleBody">
+        <div itemprop="articleBody">
           {% if page.thumbnail %}
             <picture>
                 <img src="{{ site.url }}/{{ page.thumbnail }}" alt="{{ page.title }}" class="img-fit">
@@ -43,10 +43,6 @@ layout: default
           {% endif %}
           {{ content }}
         </div>
-
-        {%- if site.disqus.shortname -%}
-          {%- include disqus_comments.html -%}
-        {%- endif -%}
 
         <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 
