new title background added for travels intro section

--- a/_includes/intro-travels.html
+++ b/_includes/intro-travels.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="{{ site.url }}/assets/img/background3.jpg" alt="سفرنامه"></div>
+        <div class="parallax"><img src="{{ site.url }}/assets/img/veeterzy-tree.jpg" alt="سفرنامه"></div>
     </div>
 
     <div id="intro-travel-body" class="container">
