--- a/_includes/blog_latest_posts.html
+++ b/_includes/blog_latest_posts.html
@@ -3,7 +3,7 @@
     <div class="parallax-container valign-wrapper">
         <div class="section no-pad-bot">
             <div class="container">
-                <div class="row center">
+                <div class="row center grey-text text-darken-3">
                     <h4>
                             <i class="fa fa-book"></i>&nbsp;
                             آخرین مطالب وبلاگ
@@ -11,7 +11,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="{{ site.url }}/assets/img/background2.jpg" alt="آخرین مطالب وبلاگ"></div>
+        <div class="parallax"><img src="{{ site.url }}/assets/img/blog-bg.jpg" alt="آخرین مطالب وبلاگ"></div>
     </div>
 
     <div class="container">
