intro about section modified and social_icons_bar.html created in _includes folder

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,16 +8,27 @@
                 <div class="col s12 m12 l8">
                     <h4 class="center">
                         <i class="fa fa-address-card-o"></i> &nbsp;
-                        چند خطی درباره من
+                        درباره من
                     </h4>
                     <p>
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                        <i class="fa fa-user"></i> &nbsp; عارف فلاح
+                        <br><i class="fa fa-code"></i> &nbsp; توسعه دهنده پایتون/ جنگو
+                        <br><i class="fa fa-html5"></i> &nbsp; طراح و توسعه دهنده وب (Full stack)
+                        <br><i class="fa fa-linux"></i> &nbsp; لینوکس ادمین
+                        </p><p>
+                        <span class="center-align ltr">
+                            <i class="fa fa-phone"></i>&nbsp;<i class="fa fa-whatsapp"></i>&nbsp;<i class="fa fa-telegram"></i> &nbsp; +98 936 848 9724
+                            <br><i class="fa fa-envelope-o"></i> &nbsp; Aref.Fallah@gmail.com
+                        </span>
                     </p>
                     <br>
                     <span>
                         <a href="{{ site.url }}/about/" class="btn btn-large grey darken-3 grey-text text-lighten-4 waves-effect waves-light">بیشتر ...</a>
                     </span>
+                    <br>
+                    <div class="grey darken-3">
+                        {% include social_icons_bar.html %}
+                    </div>
                 </div>
             </div>
         </div>
