--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,10 @@
 <footer class="page-footer grey darken-3 grey-text text-lighten-4 z-depth-1">
     <div class="container">
         <div class="row">
+            {% include social_icons_bar.html %}
+
+            <div class="clearfix"></div>
+
             <div class="col l6 s12">
                 <h5 class="center">پانویس</h5>
                 <p class="align-justify">
@@ -28,15 +32,6 @@
                 <li><a class="grey-text text-lighten-4" href="#!">Link 4</a></li>
                 </ul>
             </div>
-        </div>
-
-        <div id="footer-social-icons" class="s12 center-align">
-            <a class="grey-text text-lighten-4" href="{{ site.url }}/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
-            <a class="grey-text text-lighten-4" href="{{ site.github_url }}"><i class="fa fa-github fa-2x"></i></a>
-            <a class="grey-text text-lighten-4" href="{{ site.stackoverflow_url }}"><i class="fa fa-stack-overflow fa-2x"></i></a>
-            <a class="grey-text text-lighten-4" href="{{ site.linkedin_url }}"><i class="fa fa-linkedin fa-2x"></i></a>
-            <a class="grey-text text-lighten-4" href="{{ site.instagram_url }}"><i class="fa fa-instagram fa-2x"></i></a>
-            <a class="grey-text text-lighten-4" href="{{ site.twitter_url }}"><i class="fa fa-twitter fa-2x"></i></a>
         </div>
 
     </div>
