--- a/_includes/about.html
+++ b/_includes/about.html
@@ -25,12 +25,20 @@
                     <span>
                         <a href="{{ site.url }}/about/" class="btn btn-large grey darken-3 grey-text text-lighten-4 waves-effect waves-light">بیشتر ...</a>
                     </span>
-                    <br>
+
+                </div>
+
+            </div>
+
+            <div class="clearfix"></div>
+            <div class="row">
+                <div class="col s12">
                     <div class="grey darken-3">
                         {% include social_icons_bar.html %}
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
