intro-portfolio section background changed

--- a/_includes/intro-portfolio.html
+++ b/_includes/intro-portfolio.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="{{ site.url }}/assets/img/background2.jpg" alt="آخرین مقاله ها"></div>
+        <div class="parallax"><img src="{{ site.url }}/assets/img/portfolio-bg.jpg" alt="آخرین مقاله ها"></div>
     </div>
 
     <div class="container">
