size > 0 appended to this pages to not show if they are empty

--- a/_includes/intro-portfolio.html
+++ b/_includes/intro-portfolio.html
@@ -1,4 +1,4 @@
-{% if site.portfolio %}
+{% if site.portfolio.size > 0 %}
 <section id="portfolio">
 
     <div class="parallax-container valign-wrapper">
