--- a/_includes/intro-travels.html
+++ b/_includes/intro-travels.html
@@ -1,4 +1,4 @@
-{% if site.travels %}
+{% if site.travels.size > 0 %}
 <section id="travels">
 
     <div class="parallax-container valign-wrapper">
