contact page informations inserted but form-script if none

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,11 +20,7 @@
                             <i class="fa fa-phone"></i>&nbsp;<i class="fa fa-whatsapp"></i>&nbsp;<i class="fa fa-telegram"></i> &nbsp; +98 936 848 9724
                             <br><i class="fa fa-envelope-o"></i> &nbsp; Aref.Fallah@gmail.com
                         </span>
-                    </p>
-                    <br>
-                    <span>
-                        <a href="{{ site.url }}/about/" class="btn btn-large grey darken-3 grey-text text-lighten-4 waves-effect waves-light">بیشتر ...</a>
-                    </span>
+                    </p>                    
 
                 </div>
 
@@ -33,12 +29,15 @@
             <div class="clearfix"></div>
             <div class="row">
                 <div class="col s12">
-                    <div class="grey darken-3">
-                        {% include social_icons_bar.html %}
+                    <div class="">
+                        {% include social_icons_bar_grey.html %}
                     </div>
                 </div>
             </div>
-
+            <br>
+            <span>
+                <a href="{{ site.url }}/about/" class="btn btn-large grey darken-3 grey-text text-lighten-4 waves-effect waves-light">بیشتر ...</a>
+            </span>
         </div>
     </div>
 </section>
