--- a/_includes/social_icons_bar.html
+++ b/_includes/social_icons_bar.html
@@ -1,4 +1,4 @@
-<div id="footer-social-icons" class="s12 center-align">
+<div class="s12 center-align social-icons-bar">
     <a class="grey-text text-lighten-4" href="{{ site.github_url }}"><i class="fa fa-github fa-2x"></i></a>
     <a class="grey-text text-lighten-4" href="{{ site.stackoverflow_url }}"><i class="fa fa-stack-overflow fa-2x"></i></a>
     <a class="grey-text text-lighten-4" href="{{ site.linkedin_url }}"><i class="fa fa-linkedin fa-2x"></i></a>
