--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,11 +3,8 @@
         <div class="nav-wrapper container">
             <a id="logo-container" href="{{ site.url }}" class="brand-logo">IAMRF</a>
             <ul class="left hide-on-med-and-down">            
-                {% for page in site.pages %}
-                    {% if page.title %}
-                        <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
-                    {% endif %}
-                {% endfor %}
+                <li><a href="{{ site.url }}/about">درباره</a></li>
+                <li><a href="{{ site.url }}/contact">تماس با من</a></li>
 
                 <li><a href="{{ site.github_url }}"><i class="fa fa-github fa-2x"></i></a></li>
                 <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss fa-2x"></i></a></li>
@@ -20,12 +17,14 @@
 </div>
 
 <ul id="nav-mobile" class="sidenav">
-    <li><a href="{{ site.url }}">خانه</a></li>
-    {% for page in site.pages %}
-        {% if page.title %}
-        <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
-        {% endif %}
-    {% endfor %}
+    <li><a href="{{ site.url }}">خانه</a></li>            
+    <li><a href="{{ site.url }}/about">درباره</a></li>
+    <li><a href="{{ site.url }}/contact">تماس با من</a></li>
+    <br>
+    <li><a href="{{ site.url }}/blog">وبلاگ</a></li>
+    <li><a href="{{ site.url }}/travels">سفرنامه</a></li>
+    <li><a href="{{ site.url }}/portfolio">نمونه کار ها</a></li>
+    
 
     <hr>
     <li>
