footer boxes realigned

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,17 +5,6 @@
 
             <div class="clearfix"></div>
 
-            <div class="col l6 s12">
-                <h5 class="center">پانویس</h5>
-                <p class="align-justify">
-                    برای تماس با من میتوانید از طریق صفحه ی
-                    <a href="{{ site.url }}/contact/" class="grey-text text-lighten-4">
-                    "تماس با من"
-                    </a>
-                    و یا از طریق پست الکترونیک و تماس تلفنی اقدام کنید.
-                </p>
-
-            </div>
             <div class="col l3 s12 footer-links">
                 <h5 class="center">صفحه های دیگر</h5>
                 <ul>
@@ -26,6 +15,18 @@
                     {% endfor %}
             
                 </ul>
+            </div>
+
+            <div class="col l6 s12">
+                <h5 class="center"> ارتباط با ما </h5>
+                <p class="align-justify">
+                    برای تماس با من میتوانید از طریق صفحه ی
+                    <a href="{{ site.url }}/contact/" class="grey-text text-lighten-4">
+                    "ارتباط با ما"
+                    </a>
+                    و یا از طریق پست الکترونیک و تماس تلفنی اقدام کنید.
+                </p>
+
             </div>
             <div class="col l3 s12">
                 <picture class="hide-on-med-and-down">
