--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
             <a id="logo-container" href="{{ site.url }}" class="brand-logo">IAMRF</a>
             <ul class="left hide-on-med-and-down">            
                 <li><a href="{{ site.url }}/about">درباره</a></li>
-                <li><a href="{{ site.url }}/contact">تماس با من</a></li>
+                <li><a href="{{ site.url }}/contact">ارتباط با من</a></li>
 
                 <li><a href="{{ site.github_url }}"><i class="fa fa-github fa-2x"></i></a></li>
                 <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss fa-2x"></i></a></li>
@@ -19,7 +19,7 @@
 <ul id="nav-mobile" class="sidenav">
     <li><a href="{{ site.url }}">خانه</a></li>            
     <li><a href="{{ site.url }}/about">درباره</a></li>
-    <li><a href="{{ site.url }}/contact">تماس با من</a></li>
+    <li><a href="{{ site.url }}/contact">ارتباط با من</a></li>
     <br>
     <li><a href="{{ site.url }}/blog">وبلاگ</a></li>
     <li><a href="{{ site.url }}/travels">سفرنامه</a></li>
