icon size in title of latest sections in intro page was increased to fa-4x

--- a/_includes/blog_latest_posts.html
+++ b/_includes/blog_latest_posts.html
@@ -4,8 +4,8 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row center grey-text text-darken-3">
+                    <i class="fa fa-book fa-4x"></i><br>
                     <h4>
-                            <i class="fa fa-book"></i>&nbsp;
                             آخرین مطالب وبلاگ
                     </h4>
                 </div>
