--- a/_includes/intro-travels.html
+++ b/_includes/intro-travels.html
@@ -5,8 +5,8 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row center">
+                    <i class="fa fa-tree fa-4x"></i><br>
                     <h4>
-                            <i class="fa fa-tree"></i>&nbsp;
                             سفرنامه
                     </h4>
                 </div>
