--- a/_includes/intro-portfolio.html
+++ b/_includes/intro-portfolio.html
@@ -5,8 +5,8 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row center">
+                    <i class="fa fa-suitcase fa-4x"></i><br>
                     <h4>
-                            <i class="fa fa-suitcase"></i>&nbsp;
                             نمونه کار
                     </h4>
                 </div>
