--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,8 +348,10 @@ footer.page-footer {
 }
 
 #about-box p{
-  font-size: 1.5rem !important;
+  text-align: center;
+  font-size: 1.2rem !important;
   line-height: 2;
+  margin: 2rem 0;
 }
 
 #main-footer img{
