--- a/assets/css/rouge_theme_native.css
+++ b/assets/css/rouge_theme_native.css
@@ -68,3 +68,14 @@
 .highlight .vg { color: #40ffff } /* Name.Variable.Global */
 .highlight .vi { color: #40ffff } /* Name.Variable.Instance */
 .highlight .il { color: #3677a9 } /* Literal.Number.Integer.Long */
+
+
+/*  styles for fenced_code_blocks  */
+.highlighter-rouge{
+    display: inline-block;
+    background-color: #444;
+    color: #eee;
+    padding: .2rem .5rem;
+    border-radius: .2rem;
+    direction: ltr;
+}
