padding sets for blockquote in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ pre{
   overflow-x: auto;
 }
 
+blockquote{
+  padding: 1.2rem 1rem;
+}
+
 .navbar-fixed{
   position: absolute !important;
   top: 0;
