mobile navbar links order was changed, blog and travels and portfolio links added to pc-view navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,10 @@
     <nav id="main-navbar" class="white" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="{{ site.url }}" class="brand-logo">IAMRF</a>
-            <ul class="left hide-on-med-and-down">            
+            <ul class="left hide-on-med-and-down">
+                <li><a href="{{ site.url }}/blog">وبلاگ</a></li>
+                <li><a href="{{ site.url }}/travels">سفرنامه</a></li>
+                <li><a href="{{ site.url }}/portfolio">نمونه کار ها</a></li>
                 <li><a href="{{ site.url }}/about">درباره</a></li>
                 <li><a href="{{ site.url }}/contact">ارتباط با من</a></li>
 
@@ -17,14 +20,13 @@
 </div>
 
 <ul id="nav-mobile" class="sidenav">
-    <li><a href="{{ site.url }}">خانه</a></li>            
-    <li><a href="{{ site.url }}/about">درباره</a></li>
-    <li><a href="{{ site.url }}/contact">ارتباط با من</a></li>
-    <br>
+    <li><a href="{{ site.url }}">خانه</a></li>
     <li><a href="{{ site.url }}/blog">وبلاگ</a></li>
     <li><a href="{{ site.url }}/travels">سفرنامه</a></li>
     <li><a href="{{ site.url }}/portfolio">نمونه کار ها</a></li>
-    
+    <br>    
+    <li><a href="{{ site.url }}/about">درباره</a></li>
+    <li><a href="{{ site.url }}/contact">ارتباط با من</a></li>    
 
     <hr>
     <li>
